@@ -3,3 +3,4 @@
  - Added automatic "system-id" injection from dmi bios, also compatible with SystemID boot option and former SMUUID from smbios,plist
  - Added "system-type' automatic injection (1=Desktop) plus override possibility with the new system-type option in bootConfig
 - Added SMserial and SMproductname new options for smbios.plist
+- Merged with asere patch, while keeping my fake_efi.c changes, and adding a new stringForKey() API, also changed the DT__XXXX() set of functions to handle const char * values instead of char*.
